<resources>
    <string name="app_name">문화생활\n기록부</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signin</string>
    <string name="join_email">Signup by email</string>
    <string name="signin_google">Google login</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="category_add">카테고리</string>
    <string name="charge">금액</string>
    <string name="detail_content">상세 내역</string>
    <string name="cancle">취소</string>
    <string name="finish">완료</string>
    <string name="content">내용</string>
    <string name="time">시간</string>
    <string name="date">날짜</string>
    <string name="title">제목</string>
    <string name="user_name">사용자명</string>
    <string name="mypage">My TicketBook</string>
</resources>
