<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ScheduleList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!--        <ImageView-->
        <!--            android:id="@+id/schedule_image"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:background="@android:color/darker_gray"-->
        <!--            android:scaleType="centerCrop" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:layout_gravity="left"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/schedule_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="2dp"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/schedule_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/date"
                    android:textColor="#7A7A7A" />

                <TextView
                    android:id="@+id/schedule_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/time"
                    android:textColor="#7A7A7A" />

            </LinearLayout>

            <TextView
                android:id="@+id/schedule_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/schedule_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>